#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ(2.50)
AC_INIT([MGMRootClass], [1.0], [mgmarino@uw.edu])
#AC_CONFIG_SRCDIR([MGMRisetimeInfo.hh])

CWD=`pwd`
THISSRCDIR=`basename $CWD`
AC_SUBST(CWD)
AC_SUBST(THISSRCDIR)
AC_CONFIG_FILES([
                 LoadMGMClasses.C 
                 ])
AC_OUTPUT
echo 
echo "**********************************************************************************"
echo "**********************************************************************************"
echo
echo "You have successfully configured $PACKAGE_NAME.  Please now compile by issuing the command:"
echo 
echo "     make"
echo 


